media : Return after rejecting promise in MediaDrmBridge

This fixes a bug where we continue to call Java after rejecting a
promise, which could trigger rejecting the same promise again.

BUG=597514
TEST=No double promise rejection in manual testing.

Review URL: https://codereview.chromium.org/1823413003

Cr-Commit-Position: refs/heads/master@{#383110}

Former-commit-id: 950d2d3ba6e0aee4bbae0c67eb6c77feaae55314